--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a final-year MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about pushing the frontiers of generative models, with a recent focus on scaling multi-modal reasoning in vision, language, audio, and spatial domains, by curating and synthesizing large datasets. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
+  I am a final-year MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about pushing the frontiers of generative models, with a recent focus on scaling multi-modal reasoning in vision, language, audio, and spatial domains, and enabling LLMs and AI Agents to perform life-long continuous active learning just as humans do. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
 </font></p>
 <p><font face="Verdana">
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <hl>from scratch</hl> (not finetuning existing models) with <hl>less than 0.1M USD cost</hl> but outperforms LLaMA2-7B.
