--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Apr 2024] I lead the development of <hl>JetMoE-8B</hl>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
+      [Apr 2024] I lead the development of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
       <ul>
         <a href="https://research.myshell.ai/jetmoe">Technical blog</a> <br> 
         <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">MIT CSAIL posts</a> <br> 
