--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ li {
   I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
-  Beyond research, I also have extensive experience <hl>transforming cutting-edge technology into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> for everyone to build and use AI agents. The platform now has <a href="https://www.myshell.ai">>3M users</a> and <a href="https://www.myshell.ai">>10,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>200M interactions</a> with the AI agents. These make MyShell one of the most successful agent platforms on the market.
+  Beyond research, I also have extensive experience <hl>transforming cutting-edge technology into popular products</hl>. I co-founded <a href="https://www.myshell.ai">MyShell.ai</a> for everyone to build and use AI agents. The platform now has <a href="https://www.myshell.ai">>3M users</a> and <a href="https://www.myshell.ai">>10,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>200M interactions</a> with the AI agents. These make MyShell one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
