--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ li {
     <a href="https://arxiv.org/abs/2312.01479">paper</a> | <a href="https://research.myshell.ai/open-voice">website</a> | <a href="https://github.com/myshell-ai/OpenVoice">source code</a> <br>
     </p>
     <p class="padding">
-    <hl>Trended 1st on Github</hl> <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> 
+    <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <hl>Trended 1st on Github</hl>
     </p></td>
   </tr>
 
@@ -221,7 +221,7 @@ li {
     <a href="https://github.com/myshell-ai/MeloTTS">source code</a> <br>
     </p>
     <p class="padding">
-      <a class="github-button" href="https://github.com/myshell-ai/MeloTTS" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> 
+      <a class="github-button" href="https://github.com/myshell-ai/MeloTTS" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <hl>19.2M downloads. One of the most widely adopted AI models since 2024</hl>
     </p></td>
   </tr>
 
@@ -288,7 +288,7 @@ li {
     <p class="padding"><font face="Verdana">
     <b>MonoGRNet: A Geometric Reasoning Network for Monocular 3D Object Localization</b><br>
     <b>Zengyi Qin</b>, Jinglu Wang and Yan Lu<br>
-    <i>The Thirty-Third AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2019, <b>Oral Presentation, Acceptance Rate < 8% </b> </i><br>
+    <i>The Thirty-Third AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2019 <br> <hl>Oral Presentation, Acceptance Rate < 8% </hl> </i><br>
     </p>
     <p class="padding"><font face="Verdana">A state-of-the-art monocular 3D object detection approach based on geometric reasoning. We proposed to decompose the whole task into four progressive sub-tasks that significantly facilitates the monocular 3D object detection.
     </p>
