--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ li {
   I am a final-year MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am passionate about pushing the frontiers of generative models, with a recent focus on scaling multi-modal reasoning in vision, language, audio, and spatial domains, and enabling LLMs and AI Agents to perform life-long continuous active learning just as humans do. My ultimate goal is to develop general-purpose intelligence that understands, interacts, and creates in both the digital and physical worlds.
 </font></p>
 <p><font face="Verdana">
-  I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE</a>,  an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models) with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a> but outperforms LLaMA2-7B.
+  I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
   I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
@@ -124,7 +124,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Apr 2024] I lead the development of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained from scratch with less than 0.1M USD cost but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
+      [Apr 2024] I lead the development of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained from scratch, under extreme limitations in compute and data, with less than 0.1M USD cost, but outperforms LLaMA2-7B. It democratized high-performance LLM pre-training and post-training, and received strong positive feedback from the field.
       <ul>
         <a href="https://research.myshell.ai/jetmoe">Technical blog</a> <br> 
         <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">MIT CSAIL posts</a> <br> 
