--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ li {
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
   I also co-founded the AI Agent platform <a href="https://www.myshell.ai">MyShell</a> for everyone to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>3M users</a> and <a href="https://www.myshell.ai">>10,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>200M interactions</a> with the AI agents. These make MyShell one of the most successful agent platforms in the field.
@@ -140,7 +140,7 @@ li {
         Now <hl>~30k stars</hl>, and ranked <hl>top 0.03%</hl> of all contemporary open-source projects based on stars <br> 
         <hl>Serving >3M users</hl> on MyShell. Solid production-grade algorithm <br>
         Covered by <a href='https://venturebeat.com/ai/open-source-ai-voice-cloning-arrives-with-myshells-new-openvoice-model/'>VentureBeat</a>, <a href="https://hyscaler.com/insights/ai-voice-cloning-revolution/">HyScaler</a> and other medias <br>
-        <i>AI Voice Cloning Redefined: OpenVoice Unveils Revolutionary Open-Source Technology</i> (<a href="https://hyscaler.com/insights/ai-voice-cloning-revolution">1</a>)
+        <i>AI Voice Cloning Redefined: OpenVoice Unveils Revolutionary Open-Source Technology</i> (<a href="https://hyscaler.com/insights/ai-voice-cloning-revolution">1</a>) <br>
       </ul>
     </li>
    </ul>
@@ -191,22 +191,9 @@ li {
     <a href="https://arxiv.org/abs/2312.01479">paper</a> | <a href="https://research.myshell.ai/open-voice">website</a> | <a href="https://github.com/myshell-ai/OpenVoice">source code</a> <br>
     </p>
     <p class="padding">
-    <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <hl>Trended 1st on Github</hl>
-    </p></td>
-  </tr>
-
-  <!-- Interspeech -->
-  <tr>
-    <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
-    <td width="75%" valign="middle">
-    <p class="padding"><font face="Verdana">
-    <b><a id="dreamvoice">DreamVoice: Text-Guided Voice Conversion</a></b><br>
-    Jiarui Hai, Karan Thakkar, Helin Wang, <b>Zengyi Qin</b>, Mounya Elhilali<br>
-    <i>Interspeech, 2024</i><br>
-    </p>
-    <p class="padding"><font face="Verdana"> Convert a voice into any voice based on the input text prompt. <br>
-    <a href="https://arxiv.org/abs/2406.16314">paper</a> | <a href="https://research.myshell.ai/dreamvoice">website</a> | <a href="https://github.com/myshell-ai/DreamVoice">source code</a> <br>
-    </p>
+    <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <br>
+    <a href="https://trendshift.io/repositories/6161" target="_blank"><img src="https://trendshift.io/api/badge/repositories/6161" alt="myshell-ai%2FOpenVoice | Trendshift" style="width: 250px; height: 55px;" width="250" height="55"/></a>  
+  </p></td>
   </tr>
 
   <!-- MeloTTS -->
@@ -221,8 +208,23 @@ li {
     <a href="https://github.com/myshell-ai/MeloTTS">source code</a> <br>
     </p>
     <p class="padding">
-      <a class="github-button" href="https://github.com/myshell-ai/MeloTTS" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <hl>19.2M downloads. One of the most widely adopted AI models since 2024</hl>
+      <a class="github-button" href="https://github.com/myshell-ai/MeloTTS" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> <hl>19.2M downloads. One of the most widely adopted AI models since 2024</hl> <br>
+      <a href="https://trendshift.io/repositories/8133" target="_blank"><img src="https://trendshift.io/api/badge/repositories/8133" alt="myshell-ai%2FMeloTTS | Trendshift" style="width: 250px; height: 55px;" width="250" height="55"/></a>
     </p></td>
+  </tr>
+
+    <!-- Interspeech -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
+    <p class="padding"><font face="Verdana">
+    <b><a id="dreamvoice">DreamVoice: Text-Guided Voice Conversion</a></b><br>
+    Jiarui Hai, Karan Thakkar, Helin Wang, <b>Zengyi Qin</b>, Mounya Elhilali<br>
+    <i>Interspeech, 2024</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> Convert a voice into any voice based on the input text prompt. <br>
+    <a href="https://arxiv.org/abs/2406.16314">paper</a> | <a href="https://research.myshell.ai/dreamvoice">website</a> | <a href="https://github.com/myshell-ai/DreamVoice">source code</a> <br>
+    </p>
   </tr>
 
 </table>
