--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ li {
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
+<a href="https://twitter.com/qinzytech?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </td>
 </tr>
 </table>
