--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ li {
   I am also the main author of several widely recognized open-source AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
-  I also co-founded the AI Agent platform <a href="https://www.myshell.ai">MyShell</a> for everyone to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>3M users</a> and <a href="https://www.myshell.ai">>10,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>200M interactions</a> with the AI agents. These make MyShell one of the most successful agent platforms in the field.
+  I also co-founded an <a href="https://www.myshell.ai">AI Agent platform</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>3M users</a> and <a href="https://www.myshell.ai">>10,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>200M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
