--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a final-year MIT PhD student affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a> working on Multi-modal (vision, language, audio) LLM and Agent.
+  I am a final-year MIT PhD candidate affiliated with <a href="https://www.csail.mit.edu">MIT CSAIL</a> working on Multi-modal (vision, language, audio) LLM and Agent.
 </font></p>
 <p><font face="Verdana">
   I am the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
@@ -151,18 +151,6 @@ li {
 <div class="section">
   <h3 id="genai"><font face="Verdana">Projects in Generative Models</h3>
   <table width="100%">
-
-  <!-- Visual reasoning -->
-  <tr>
-    <td width="25%" valign="middle"><p><img src="figures/visual_reasoning.png" alt="" style="border-style: none" width="250" align="top"></p></td>
-    <td width="75%" valign="top">
-    <p class="padding"><font face="Verdana">
-    <b><a id="reasoning">Visual Reasoning by Learning Latent Symbolization from Synthetic Data</a></b><br>
-    Despite the impressive capabilities of LLMs in text-based reasoning, they remain far from achieving comparable proficiency in visual reasoning. We identified the core issue as their inability to symbolize visual input, and propose <hl>learning latent symbolization from synthetic data</hl> to enhance their visual reasoning capabilities. <br>
-    <a href="https://www.qinzy.tech">paper coming soon</a><br>
-    </p>
-    </td>
-  </tr>
 
   <!-- JetMoE -->
   <tr>
