--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li {
 <meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
-<meta name="keywords" content="Zengyi Qin, Zen Qin, Charles Qin, Charles Z. Qin">
+<meta name="keywords" content="Zengyi Qin">
 <meta property="og:image" content="figures/zengyi.jpg">
 <meta property="og:image:width" content="256">
 <meta property="og:image:height" content="256">
@@ -87,7 +87,7 @@ li {
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
-<a href="https://twitter.com/qinzytech?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/mitqinzy?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </td>
 </tr>
 </table>
@@ -104,7 +104,7 @@ li {
   I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  I also co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>500M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field. The company went public and has a total valuation of <a href="https://www.coingecko.com/en/coins/myshell"><span id="fdv1">FDV</span></a>.
+  I also co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>500M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
@@ -125,7 +125,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Feb 2025] MyShell is publicly listed on major crypto exchanges with a total valuation of <a href="https://www.coingecko.com/en/coins/myshell"><span id="fdv2">FDV</span></a>. Huge congrats to the team! This is a really hard but rewarding journey because almost nobody believed AI + Decentralization make sense when we started MyShell two years ago. But now it already becomes a consensus.
+      [Feb 2025] MyShell is publicly listed on major crypto exchanges. Huge congrats to the team! This is a really hard but rewarding journey because almost nobody believed AI + Decentralization make sense when we started MyShell two years ago. But now it already becomes a consensus.
       <ul>
         Media coverage: <a href="https://www.binance.com/en/square/post/20859989647258">Binance</a>, <a href="https://www.panewslab.com/en/articledetails/9f748vm9.html">PANews</a>, <a href="https://x.com/binance/status/1894985212679037293">Twitter</a><br>
       </ul>
