--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@ li {
   Currently cooking a <hl>BIG</hl> thing.
 </font></p>
 <p><font face="Verdana">
-  I had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. I am the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  Had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. The primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
-  I have solid experience pre-training and post-training LLMs. I was the project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
+  Solid experience pre-training and post-training LLMs. Project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  I also co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>500M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
+  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>500M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
@@ -112,10 +112,9 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2025 <br> Doctor of Philosophy - PhD, affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2022. Master of Science <br>
-<li><b>Stanford University</b>, 2019, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
-<li><b>Tsinghua University</b>, 2016 - 2020. Bachelor of Engineering, Electronic Engineering<br>
+<li><b>Massachusetts Institute of Technology</b>, PhD, <a href="https://www.csail.mit.edu/">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
+<li><b>Stanford University</b>, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
+<li><b>Tsinghua University</b>, BE, Electronic Engineering<br>
 </ul>
 </font></p>
 </div>
