--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  Currently cooking a <hl>BIG</hl> thing.
+  Researcher and entrepreneur (with successful exit via public listing). Currently cooking a <hl>BIG</hl> thing.
 </font></p>
 <p><font face="Verdana">
-  Had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. The primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  Had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. Was the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
-  Solid experience pre-training and post-training LLMs. Project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
+  Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>500M interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
+  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>1 billion interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
