--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ li {
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:title" content="Zengyi Qin">
 <meta property="og:description" content="MIT PhD | GenAI">
-<title>Zengyi Qin | MIT</title>
+<title>Zengyi Qin</title>
 <meta charset="utf-8">
 
 <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -86,7 +86,7 @@ li {
 <td width="3%"></td>
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin</h2>
-<p><font face="Verdana">qinzy [at] mit.edu</font></p>
+<p><font face="Verdana">qinzy [at] alum.mit.edu</font></p>
 <a href="https://twitter.com/mitqinzy?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </td>
 </tr>
@@ -104,7 +104,7 @@ li {
   Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">>5M users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">>1 billion interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
+  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">> 5 million users</a> and <a href="https://www.myshell.ai">>200,000 AI agents</a> are built. The users have had <a href="https://www.myshell.ai">> 1 billion interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
