--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ li {
   Researcher and entrepreneur (company public listed). Currently cooking a <hl>BIG</hl> thing.
 </font></p>
 <p><font face="Verdana">
-  Had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. Was the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  Had a wonderful PhD journey at <a href="https://www.csail.mit.edu">MIT</a>. Was the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~30k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
   Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://research.myshell.ai/jetmoe">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://research.myshell.ai/jetmoe">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
@@ -112,7 +112,7 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, PhD, <a href="https://www.csail.mit.edu/">MIT CSAIL</a> and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a> </li>
+<li><b>Massachusetts Institute of Technology</b>, PhD, <a href="https://www.csail.mit.edu/">MIT</a></li>
 <li><b>Stanford University</b>, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
 <li><b>Tsinghua University</b>, BE, Electronic Engineering<br>
 </ul>
