--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020-2025, PhD, <a href="https://www.csail.mit.edu/">MIT</a></li>
+<li><b>Massachusetts Institute of Technology</b>, 2020-2025, PhD
 <li><b>Stanford University</b>, 2019, Visiting Researcher in <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab</a> <br>
 <li><b>Tsinghua University</b>, 2016-2020, BE, Electronic Engineering<br>
 </ul>
