Update Twitter link and company status description

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ li {
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana">qinzy [at] alum.mit.edu</font></p>
-<a href="https://twitter.com/qinzytech" class="twitter-follow-button" data-show-count="false">Follow @qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/qinzytech" class="twitter-follow-button" data-show-count="false">@qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </td>
 </tr>
 </table>
@@ -95,7 +95,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  Researcher and entrepreneur (company public listed).
+  Researcher and entrepreneur (prior company public listed).
 </font></p>
 <p><font face="Verdana">
   I am the primary author of several widely recognized AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
