--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ li {
 <td width="72%">
 <h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana">qinzy [at] alum.mit.edu</font></p>
-<a href="https://twitter.com/qinzytech" class="twitter-follow-button" data-show-count="false">@qinzytech</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a href="https://twitter.com/qinzytech">Twitter</a> | <a href="https://www.linkedin.com/in/qinzy/">LinkedIn</a>
 </td>
 </tr>
 </table>
@@ -104,7 +104,7 @@ li {
   Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
 </font></p>
 <p><font face="Verdana">
-  Co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">6 million users</a> and more than <a href="https://www.myshell.ai"> 200,000 AI agents</a> are built. The users have had more than <a href="https://www.myshell.ai">1 billion interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
+  Previously, co-founded an <a href="https://www.myshell.ai">AI Agent platform MyShell</a> (Binance Listed: SHELL) for everyone to orchestrate hundreds of AI models to build and use agentic applications. The platform now has <a href="https://www.myshell.ai">6 million users</a> and more than <a href="https://www.myshell.ai"> 200,000 AI agents</a> are built. The users have had more than <a href="https://www.myshell.ai">1 billion interactions</a> with the AI agents. These make it one of the most successful agent platforms in the field.
 </font></p>
 </div>
 
