--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  Researcher and entrepreneur (prior company public listed). MIT PhD. Founder of <a href="https://agiopen.org">OpenAGI</a>, building world-class Computer Use models and its open ecosystem.
+  Researcher and entrepreneur (prior company public listed). MIT PhD. Founder of <a href="https://agiopen.org">OpenAGI Labs</a>, building world-class <a href="https://agiopen.org">Computer Use models</a> and its open ecosystem. We recently released the <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">state-of-the-art computer use model, Lux,</a> which outperforms existing models from frontier labs like Google, OpenAI, Anthropic on the Online Mind2Web benchmark, and running 2-3 times faster. We saw rapid adoption of the model after our release.
 </font></p>
 <p><font face="Verdana">
-  I am the primary author of several widely adopted AI models. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
+  I am also the primary author of several widely adopted audio models. One has <a href="https://github.com/myshell-ai/OpenVoice">~35k stars</a> and was <a href="https://www.qinzy.tech/figures/githubtrending-no1-v3.PNG">trending 1st</a> on Github. It ranked <a href="https://github.com/myshell-ai/OpenVoice">top 0.03%</a> of all open-source projects created during the similar period, based on popularity. Another project <a href="https://trendshift.io/repositories/8133">also trended 1st</a> on GitHub, receives <a href="https://www.qinzy.tech/figures/total_download.PNG">19.2M downloads</a>, making it one of the most widely adopted AI models since 2024.
 </font></p>
 <p><font face="Verdana">
   Have solid experience pre-training and post-training LLMs. Project lead of <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">JetMoE-8B</a>, an MoA+MoE LLM pre-trained and post-trained <a href="https://research.myshell.ai/jetmoe">from scratch</a> (not finetuning existing models), under <a href="https://x.com/MIT_CSAIL/status/1775916496503656679">extreme limitations in compute and data</a>, with <a href="https://research.myshell.ai/jetmoe">less than 0.1M USD cost</a>, but outperforms LLaMA2-7B.
@@ -123,6 +123,14 @@ li {
   <h3><font face="Verdana">News</h3>
   <p><font face="Verdana">
    <ul>
+    <li>
+      [Dec 2025] We recently released the <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">state-of-the-art computer use model, Lux,</a> which outperforms existing models from frontier labs like Google, OpenAI, Anthropic on the Online Mind2Web benchmark, and running 2-3 times faster. It can run a computer the way a person would, seeing the screen and taking actions across real desktop and web workflows. 
+      <ul>
+        <a href="https://agiopen.org/blog">Blog</a> <br>
+        <a href="https://x.com/agiopen_org/status/1995538447579447368?s=20">X post</a> <br>
+        <a href="https://venturebeat.com/ai/openagi-emerges-from-stealth-with-an-ai-agent-that-it-claims-crushes-openai">VentureBeat Report</a> <br> 
+      </ul>
+    </li>
     <li>
       [Feb 2025] MyShell is publicly listed on major crypto exchanges. Huge congrats to the team! This is a really hard but rewarding journey because almost nobody believed AI + Decentralization make sense when we started MyShell two years ago. But now it already becomes a consensus.
       <ul>
